--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -2,3 +2,9 @@
   overflow-y: auto;
   height: 100%;
 }
+
+.vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
+  visibility: visible;
+  -webkit-animation: none;
+  animation: none;
+}
